--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,16 +1,21 @@
+body {
+  text-align: center;
+  font-size: 20px;
+  padding: 2.5%;
+}
+
 .App {
   text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
 }
 
 .App-logo {
-  height: 40vmin;
+  width: 50%;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-bottom: 5vh;
 }
 
 .App-header {
@@ -28,11 +33,11 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page-content {
+  display: flex;
+  justify-content: center;
+}
+
+.input-group-text {
+  text-align: center;
 }
