--- a/src/components/App.css
+++ b/src/components/App.css
@@ -32,7 +32,7 @@ body {
   color: #61dafb;
 }
 
-.centered-flexbox {
+.centered-flex-box {
   display: flex;
   justify-content: center;
 }
@@ -43,4 +43,18 @@ body {
 
 .Search {
   padding: 5vh 0;
+}
+
+.package-name {
+  flex-grow: 3;
+  padding: 2vh;
+}
+
+.download-button {
+  flex-grow: 2;
+  padding: 2vh;
+}
+
+.search-result-box {
+  width: 55%;
 }
