--- a/src/components/App.css
+++ b/src/components/App.css
@@ -46,13 +46,13 @@ body {
 }
 
 .package-name {
-  flex-grow: 3;
   padding: 2vh;
+  width: 80%;
 }
 
 .download-button {
-  flex-grow: 2;
   padding: 2vh;
+  width: 20%;
 }
 
 .search-result-box {
@@ -65,4 +65,9 @@ body {
 
 .request-process-spinner {
   margin-right: 5px;
+}
+
+.search-results-container {
+  flex-direction: column;
+  align-items: center;
 }
